Keyframing Annotations doesn't work #63031

Closed
opened 2019-03-27 22:32:33 +01:00 by ChristopherAnderssarian · 9 comments

System Information
Operating system: Microsoft Windows 7
GPU: ASUS Strix Radeon Vega 64
CPU: Intel(R) Core(TM) i7-5960X
RAM: 32.0 GB
Full System Information: Here

Blender Version

Broken: 2.80, blender-2.80.0-git.532536bf52da-windows64
Worked: 2.79b

Short description of error

Keyframing an Annotations' property doesn't work. (e.g. the colour or visibility.)

Exact steps for others to reproduce the error
See attached .blend file
Annotation Keying.blend

**System Information** Operating system: Microsoft Windows 7 GPU: ASUS Strix Radeon Vega 64 CPU: Intel(R) Core(TM) i7-5960X RAM: 32.0 GB Full System Information: [Here ](https://developer.blender.org/p/Christopher_Anderssarian/) **Blender Version** Broken: 2.80, `blender-2.80.0-git.532536bf52da-windows64` Worked: 2.79b **Short description of error** Keyframing an Annotations' property doesn't work. (e.g. the colour or visibility.) **Exact steps for others to reproduce the error** See attached .blend file [Annotation Keying.blend](https://archive.blender.org/developer/F6892839/Annotation_Keying.blend)
Antonio Vazquez was assigned by ChristopherAnderssarian 2019-03-27 22:32:33 +01:00

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

This probably is not meant to be supported. For advanced animation, use Grease Pencil objects.

@antoniov Should we support this or remove the ability to even set keys on these properties?

This probably is not meant to be supported. For advanced animation, use Grease Pencil objects. @antoniov Should we support this or remove the ability to even set keys on these properties?

Setting as confirmed, since the report is true. But I just don't expect this is something that needs to be supported. We could just disable keyframing these things at all.

Setting as confirmed, since the report is true. But I just don't expect this is something that needs to be supported. We could just disable keyframing these things at all.

If I understand correctly the bug, the problem is you cannot set a keyframe in any annotation property. By design this must be disabled, if we missed to remove in some place we must do it.

If we enable this option, then the annotations will be used to make animations and the next is to receive requests like "why I cannot do XXXX in annotation that I can use in Gpencil?

The idea is to keep annotations simple to make annotation only. Keep more things running only divides the development resources.

On the other hand, I would like to work in future Blender versions to improve annotations, adding more editors and new annotation types like, for example, floating text, arrows, change annotations location, etc.

If I understand correctly the bug, the problem is you cannot set a keyframe in any annotation property. By design this must be disabled, if we missed to remove in some place we must do it. If we enable this option, then the annotations will be used to make animations and the next is to receive requests like "why I cannot do XXXX in annotation that I can use in Gpencil? The idea is to keep annotations simple to make annotation only. Keep more things running only divides the development resources. On the other hand, I would like to work in future Blender versions to improve annotations, adding more editors and new annotation types like, for example, floating text, arrows, change annotations location, etc.

@antoniov Yes, we just need to set the propertied to be not keyable.

@antoniov Yes, we just need to set the propertied to be not keyable.

@WilliamReynish I'm going to take a look at that.

@WilliamReynish I'm going to take a look at that.

This issue was referenced by 33b43dd933

This issue was referenced by 33b43dd93341b9b6967e42d65ab18a6868ccca53

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63031
No description provided.